--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               </div>
             </div>
             <div class="films__box">
-              <img class="films__bg" src="./images/film1.png" alt="film" />
+              <img class="films__bg" src="./images/film2.png" alt="film" />
               <div class="films-content">
                 <i class="fad fa-play films__icon"></i>
                 <div class="films__time">2:32:13</div>
@@ -88,7 +88,7 @@
               </div>
             </div>
             <div class="films__box">
-              <img class="films__bg" src="./images/film1.png" alt="film" />
+              <img class="films__bg" src="./images/film3.png" alt="film" />
               <div class="films-content">
                 <i class="fad fa-play films__icon"></i>
                 <div class="films__time">1:53:45</div>
@@ -98,7 +98,7 @@
               </div>
             </div>
             <div class="films__box">
-              <img class="films__bg" src="./images/film1.png" alt="film" />
+              <img class="films__bg" src="./images/film4.png" alt="film" />
               <div class="films-content">
                 <i class="fad fa-play films__icon"></i>
                 <div class="films__time">2:58:20</div>
@@ -218,5 +218,19 @@
         </div>>
       </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__social">
+          <a href="#!" class="footer__play">
+            <img src="./images/google play.svg" alt="google play"> 
+          </a>
+          <a href="#!" class="footer__store">
+           <img src="./images/AppStore.svg" alt="appstore">
+          </a>
+        </div>
+        <p class="footer__text">© PROWEB. В целях обучения 2023</p>
+      </div>
+    </footer>
+    
   </body>
 </html>
